[gd_scene load_steps=15 format=2]

[ext_resource path="res://UI/Menu and Stages/StageButtonPTT.png" type="Texture" id=1]
[ext_resource path="res://UI/Menu and Stages/StageButton2.png" type="Texture" id=2]
[ext_resource path="res://UI/bgstage.png" type="Texture" id=3]
[ext_resource path="res://UI/Menu and Stages/Stages.gd" type="Script" id=4]
[ext_resource path="res://UI/Gamer.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://UI/Menu and Stages/Stage.mp3" type="AudioStream" id=6]
[ext_resource path="res://UI/MenuButton1.png" type="Texture" id=7]
[ext_resource path="res://UI/MenuButton2.png" type="Texture" id=8]
[ext_resource path="res://UI/Menu and Stages/DKA2.png" type="Texture" id=9]
[ext_resource path="res://UI/Menu and Stages/DKA.png" type="Texture" id=10]

[sub_resource type="DynamicFont" id=1]
size = 10
extra_spacing_top = -3
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 10
extra_spacing_top = -4
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 5 )

[node name="Stages" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="ColorRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )

[node name="Stage1Button" type="TextureButton" parent="."]
margin_left = 1.0
margin_top = 18.0
margin_right = 65.0
margin_bottom = 54.0
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 2 )
texture_disabled = ExtResource( 2 )

[node name="Label" type="Label" parent="Stage1Button"]
margin_left = -17.0
margin_top = -14.0
margin_right = 84.0
margin_bottom = 7.0
custom_fonts/font = SubResource( 1 )
text = "27 September 1945
Kantor Pusat PTT"
align = 1

[node name="Label2" type="Label" parent="Stage1Button"]
margin_left = 13.0
margin_top = 30.0
margin_right = 53.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 2 )
text = "Stage 1"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -20.0

[node name="TouchScreenButton" type="TouchScreenButton" parent="."]
position = Vector2( 267, 5 )
scale = Vector2( 1.5, 1.5 )
normal = ExtResource( 7 )
pressed = ExtResource( 8 )

[node name="Stage2Button" type="TextureButton" parent="."]
margin_left = 129.0
margin_top = 104.0
margin_right = 193.0
margin_bottom = 144.0
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 9 )
texture_disabled = ExtResource( 9 )

[node name="Label" type="Label" parent="Stage2Button"]
margin_left = 6.0
margin_top = -12.0
margin_right = 61.0
margin_bottom = 9.0
custom_fonts/font = SubResource( 3 )
text = "28 September
Balai Besar DKA"
align = 1

[node name="Label2" type="Label" parent="Stage2Button"]
margin_left = 12.0
margin_top = 26.0
margin_right = 52.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 4 )
text = "Stage 2"
align = 1

[connection signal="pressed" from="Stage1Button" to="." method="_on_Stage1Button_pressed"]
[connection signal="pressed" from="TouchScreenButton" to="." method="_on_TouchScreenButton_pressed"]
[connection signal="pressed" from="Stage2Button" to="." method="_on_Stage2Button_pressed"]
